AUTOMAKE_OPTS			= gnu
opbxmod_LTLIBRARIES		= app_echo.la app_system.la app_enumlookup.la \
				app_playback.la app_adsiprog.la app_eval.la  \
				app_privacy.la app_transfer.la app_authenticate.la app_exec.la \
				app_userevent.la app_cdr.la app_random.la \
				app_verbose.la app_chanisavail.la app_forkcdr.la app_read.la \
				app_chanspy.la app_record.la app_getcpeid.la \
				app_voicemail.la app_controlplayback.la app_groupcount.la app_sayunixtime.la \
				app_waitforring.la app_db.la app_hasnewvoicemail.la app_senddtmf.la \
				app_waitforsilence.la app_dial.la app_lookupblacklist.la app_sendtext.la \
				app_while.la app_dictate.la app_lookupcidname.la app_setcdruserfield.la \
				app_zapateller.la app_directed_pickup.la app_macro.la app_setrdnis.la \
				app_directory.la app_settransfercapability.la app_disa.la \
				app_milliwatt.la app_skel.la app_dumpchan.la app_muxmon.la \
				app_softhangup.la app_queue.la app_changrab.la

app_echo_la_SOURCES					= app_echo.c
app_echo_la_LDFLAGS					= -module -avoid-version -no-undefined -no-undefined
app_echo_la_LIBADD					= ${top_srcdir}/corelib/libopenpbx.la
app_system_la_SOURCES				= app_system.c
app_system_la_LDFLAGS				= -module -avoid-version -no-undefined
app_system_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_getcpeid_la_SOURCES				= app_getcpeid.c
app_getcpeid_la_LDFLAGS				= -module -avoid-version -no-undefined
app_getcpeid_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_enumlookup_la_SOURCES			= app_enumlookup.c
app_enumlookup_la_LDFLAGS			= -module -avoid-version -no-undefined
app_enumlookup_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_playback_la_SOURCES				= app_playback.c
app_playback_la_LDFLAGS				= -module -avoid-version -no-undefined
app_playback_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_adsiprog_la_SOURCES				= app_adsiprog.c
app_adsiprog_la_LDFLAGS				= -module -avoid-version -no-undefined
app_adsiprog_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_eval_la_SOURCES					= app_eval.c
app_eval_la_LDFLAGS					= -module -avoid-version -no-undefined
app_eval_la_LIBADD					= ${top_srcdir}/corelib/libopenpbx.la
app_privacy_la_SOURCES				= app_privacy.c
app_privacy_la_LDFLAGS				= -module -avoid-version -no-undefined
app_privacy_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_transfer_la_SOURCES				= app_transfer.c
app_transfer_la_LDFLAGS				= -module -avoid-version -no-undefined
app_transfer_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_authenticate_la_SOURCES			= app_authenticate.c
app_authenticate_la_LDFLAGS			= -module -avoid-version -no-undefined
app_authenticate_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
app_exec_la_SOURCES					= app_exec.c
app_exec_la_LDFLAGS					= -module -avoid-version -no-undefined
app_exec_la_LIBADD					= ${top_srcdir}/corelib/libopenpbx.la
app_queue_la_SOURCES				= app_queue.c
app_queue_la_LDFLAGS				= -module -avoid-version -no-undefined
app_queue_la_LIBADD					= ${top_srcdir}/corelib/libopenpbx.la
app_userevent_la_SOURCES				= app_userevent.c
app_userevent_la_LDFLAGS				= -module -avoid-version -no-undefined
app_userevent_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_cdr_la_SOURCES					= app_cdr.c
app_cdr_la_LDFLAGS					= -module -avoid-version -no-undefined
app_cdr_la_LIBADD					= ${top_srcdir}/corelib/libopenpbx.la
app_random_la_SOURCES				= app_random.c
app_random_la_LDFLAGS				= -module -avoid-version -no-undefined
app_random_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_verbose_la_SOURCES				= app_verbose.c
app_verbose_la_LDFLAGS				= -module -avoid-version -no-undefined
app_verbose_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_chanisavail_la_SOURCES			= app_chanisavail.c
app_chanisavail_la_LDFLAGS			= -module -avoid-version -no-undefined
app_chanisavail_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
app_forkcdr_la_SOURCES				= app_forkcdr.c
app_forkcdr_la_LDFLAGS				= -module -avoid-version -no-undefined
app_forkcdr_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_read_la_SOURCES					= app_read.c
app_read_la_LDFLAGS					= -module -avoid-version -no-undefined
app_read_la_LIBADD					= ${top_srcdir}/corelib/libopenpbx.la
app_chanspy_la_SOURCES				= app_chanspy.c
app_chanspy_la_LDFLAGS				= -module -avoid-version -no-undefined
app_chanspy_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_record_la_SOURCES				= app_record.c
app_record_la_LDFLAGS				= -module -avoid-version -no-undefined
app_record_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_voicemail_la_SOURCES				= app_voicemail.c
app_voicemail_la_LDFLAGS				= -module -avoid-version -no-undefined
app_voicemail_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_controlplayback_la_SOURCES		= app_controlplayback.c
app_controlplayback_la_LDFLAGS		= -module -avoid-version -no-undefined
app_controlplayback_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
app_groupcount_la_SOURCES			= app_groupcount.c
app_groupcount_la_LDFLAGS			= -module -avoid-version -no-undefined
app_groupcount_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_sayunixtime_la_SOURCES			= app_sayunixtime.c
app_sayunixtime_la_LDFLAGS			= -module -avoid-version -no-undefined
app_sayunixtime_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
app_waitforring_la_SOURCES			= app_waitforring.c
app_waitforring_la_LDFLAGS			= -module -avoid-version -no-undefined
app_waitforring_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
app_db_la_SOURCES					= app_db.c
app_db_la_LDFLAGS					= -module -avoid-version -no-undefined
app_db_la_LIBADD					= ${top_srcdir}/corelib/libopenpbx.la
app_hasnewvoicemail_la_SOURCES		= app_hasnewvoicemail.c
app_hasnewvoicemail_la_LDFLAGS		= -module -avoid-version -no-undefined
app_hasnewvoicemail_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
app_senddtmf_la_SOURCES				= app_senddtmf.c
app_senddtmf_la_LDFLAGS				= -module -avoid-version -no-undefined
app_senddtmf_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_waitforsilence_la_SOURCES			= app_waitforsilence.c
app_waitforsilence_la_LDFLAGS			= -module -avoid-version -no-undefined
app_waitforsilence_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
app_dial_la_SOURCES					= app_dial.c
app_dial_la_LDFLAGS					= -module -avoid-version -no-undefined
app_dial_la_LIBADD					= ${top_srcdir}/corelib/libopenpbx.la
app_lookupblacklist_la_SOURCES		= app_lookupblacklist.c
app_lookupblacklist_la_LDFLAGS		= -module -avoid-version -no-undefined
app_lookupblacklist_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
app_sendtext_la_SOURCES				= app_sendtext.c
app_sendtext_la_LDFLAGS				= -module -avoid-version -no-undefined
app_sendtext_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_while_la_SOURCES				= app_while.c
app_while_la_LDFLAGS				= -module -avoid-version -no-undefined
app_while_la_LIBADD					= ${top_srcdir}/corelib/libopenpbx.la
app_dictate_la_SOURCES				= app_dictate.c
app_dictate_la_LDFLAGS				= -module -avoid-version -no-undefined
app_dictate_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_lookupcidname_la_SOURCES			= app_lookupcidname.c
app_lookupcidname_la_LDFLAGS			= -module -avoid-version -no-undefined
app_lookupcidname_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
app_setcdruserfield_la_SOURCES		= app_setcdruserfield.c
app_setcdruserfield_la_LDFLAGS		= -module -avoid-version -no-undefined
app_setcdruserfield_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
app_zapateller_la_SOURCES			= app_zapateller.c
app_zapateller_la_LDFLAGS			= -module -avoid-version -no-undefined
app_zapateller_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_directed_pickup_la_SOURCES		= app_directed_pickup.c
app_directed_pickup_la_LDFLAGS		= -module -avoid-version -no-undefined
app_directed_pickup_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
app_macro_la_SOURCES				= app_macro.c
app_macro_la_LDFLAGS				= -module -avoid-version -no-undefined
app_macro_la_LIBADD					= ${top_srcdir}/corelib/libopenpbx.la
app_setrdnis_la_SOURCES				= app_setrdnis.c
app_setrdnis_la_LDFLAGS				= -module -avoid-version -no-undefined
app_setrdnis_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_directory_la_SOURCES				= app_directory.c
app_directory_la_LDFLAGS				= -module -avoid-version -no-undefined
app_directory_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_settransfercapability_la_SOURCES	= app_settransfercapability.c
app_settransfercapability_la_LDFLAGS	= -module -avoid-version -no-undefined
app_settransfercapability_la_LIBADD	= ${top_srcdir}/corelib/libopenpbx.la
app_disa_la_SOURCES					= app_disa.c
app_disa_la_LDFLAGS					= -module -avoid-version -no-undefined
app_disa_la_LIBADD					= ${top_srcdir}/corelib/libopenpbx.la
app_milliwatt_la_SOURCES				= app_milliwatt.c
app_milliwatt_la_LDFLAGS				= -module -avoid-version -no-undefined
app_milliwatt_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_skel_la_SOURCES					= app_skel.c
app_skel_la_LDFLAGS					= -module -avoid-version -no-undefined
app_skel_la_LIBADD					= ${top_srcdir}/corelib/libopenpbx.la
app_dumpchan_la_SOURCES				= app_dumpchan.c
app_dumpchan_la_LDFLAGS				= -module -avoid-version -no-undefined
app_dumpchan_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_muxmon_la_SOURCES				= app_muxmon.c
app_muxmon_la_LDFLAGS				= -module -avoid-version -no-undefined
app_muxmon_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_softhangup_la_SOURCES			= app_softhangup.c
app_softhangup_la_LDFLAGS			= -module -avoid-version -no-undefined
app_softhangup_la_LIBADD				= ${top_srcdir}/corelib/libopenpbx.la
app_changrab_la_SOURCES                       = app_changrab.c
app_changrab_la_LDFLAGS                       = -module -avoid-version -no-undefined
app_changrab_la_LIBADD                                = ${top_srcdir}/corelib/libopenpbx.la


if WANT_APP_FLASH
opbxmod_LTLIBRARIES			+= app_flash.la
app_flash_la_SOURCES			= app_flash.c
app_flash_la_LDFLAGS			= -module -avoid-version -no-undefined
app_flash_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
endif WANT_APP_FLASH

if WANT_APP_MEETME
opbxmod_LTLIBRARIES			+= app_meetme.la
app_meetme_la_SOURCES			= app_meetme.c enter.h leave.h
app_meetme_la_LDFLAGS			= -module -avoid-version -no-undefined
app_meetme_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
endif WANT_APP_MEETME


if WANT_OSP
	opbxmod_LTLIBRARIES				+= app_osplookup_la
	app_osplookup_la_SOURCES			= app_osplookup.c
	app_osplookup_la_LIBADD			= ${SSL_LIBS}
	app_osplookup_la_CFLAGS			= ${SSL_CFLAGS}
	app_osplookup_la_LDFLAGS			= -module -avoid-version -no-undefined
	app_osplookup_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
endif WANT_OSP

if WANT_VISDN
	opbxmod_LTLIBRARIES				+= app_visdn_ppp.la
	app_visdn_ppp_la_SOURCES			= app_visdn_ppp.c
	app_visdn_ppp_la_LDFLAGS			= -module -avoid-version -no-undefined
	app_visdn_ppp_la_LIBADD			= ${top_srcdir}/corelib/libopenpbx.la
endif WANT_VISDN

if WANT_APP_TALKDETECT
opbxmod_LTLIBRARIES		+= app_talkdetect.la
app_talkdetect_la_SOURCES	= app_talkdetect.c
app_talkdetect_la_LDFLAGS	= -module -avoid-version -no-undefined
app_talkdetect_la_LIBADD	= ${top_srcdir}/corelib/libopenpbx.la
endif WANT_APP_TALKDETECT
